# fixdecoder_go

./: .gitignore  .gitmessage.txt  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE.md  README.md  SECURITY.md  bitbucket-pipelines.yml  build.rs  build.sh  buildComponentNode_test.go  buildGroupNode_test.go  buildMessageNode_test.go  chooseFixVersion.go  chooseFixVersion_test.go  ci.sh  commitlint.config.js  display.go  displayComponent.go  displayComponent_test.go  displayGroup.go  displayGroup_test.go  displayMessage.go  displayMessage_test.go  displayTag.go  displayTag_test.go  display_test.go  fixlog.txt  gitleaks-config.toml  go.mod  go.sum  handlers.go  handlers_test.go  main.go  main_test.go  scan.sh  schema.go  schema_test.go  sonar-project.properties
.badges/: traffic.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  traffic-badge.yml
ci/: regen_readme.py  scan.sh
cmd/fixdecoder/: handlers.go  main.go  main_integration_test.go  main_test.go
decoder/: display.go  displayComponent.go  displayComponent_test.go  displayGroup.go  displayGroup_test.go  displayMessage.go  displayMessage_test.go  displaySchema.go  displaySchema_test.go  displayTag.go  displayTag_test.go  display_test.go  fixparser.go  fixparser_test.go  fixtaglookup.go  fixtaglookup_test.go  prettifier.go  prettifier_test.go  schema.go  schema_test.go
fix/: chooseFixVersion.go  chooseFixVersion_test.go  versions.go
fix/fix40/: fix40.go  fix40_test.go  go.mod
fix/fix41/: fix41.go  fix41_test.go  go.mod
fix/fix42/: fix42.go  fix42_test.go  go.mod
fix/fix43/: fix43.go  fix43_test.go  go.mod
fix/fix44/: fix44.go  fix44_test.go  go.mod
fix/fix50/: fix50.go  fix50_test.go  go.mod
fix40/: fix40.go
fix41/: fix41.go
fix42/: fix42.go
fix43/: fix43.go
fix44/: fix44.go
fix50/: fix50.go
fix50SP1/: fix50SP1.go
fix50SP2/: fix50SP2.go
fixT11/: fixT11.go
packaging/: README.md
pcap2fix/: Cargo.toml  README.md
pcap2fix/src/: main.rs
resources/: generate_fix_go.sh  usage.go
scripts/: capture_and_decode.sh  fixdecoder  render_release_packaging.sh
src/: error_logger.rs  main.rs
(+29 files in other folders)
