[package]
name = "fixdecoder"
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "CLI decoder and summarizer for FIX protocol messages"
repository = "https://github.com/stephenlclarke/fixdecoder2"
readme = "README.md"
keywords = ["fix", "finance", "trading", "protocol", "decoder"]
categories = ["command-line-utilities", "network-programming", "parser-implementations"]
rust-version = "1.91"
include = [
    "src/**",
    "tests/**",
    "resources/**",
    "build.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "NOTICE.md",
]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = true }
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.19"
quick-xml = { version = "0.36", features = ["serialize"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
terminal_size = "0.4.3"
roxmltree = "0.21.1"
rayon = "1.10"
ctrlc = "3.4"
bubbletea-rs = "0.0.9"
bubbletea-widgets = { version = "0.1.12", default-features = false }
crossterm = "0.29"
tokio = { version = "1.48", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[build-dependencies]
rustc_version = "0.4"

[workspace]
members = [".", "pcap2fix"]
resolver = "2"
