[package]
name = "pcap2fix"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "PCAP to FIX stream filter: reassembles TCP payloads and emits FIX messages"
repository = "https://github.com/stephenlclarke/fixdecoder2"
readme = "README.md"
keywords = ["fix", "pcap", "trading", "network", "decoder"]
categories = ["command-line-utilities", "network-programming", "parser-implementations"]
rust-version = "1.91"
include = [
    "src/**",
    "tests/**",
    "Cargo.toml",
    "README.md",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
pcap-parser = { version = "0.14", features = ["data"] }
etherparse = "0.15"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
